# spindle

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  STATUS.md  pyproject.toml
api/: PLAN.md  pyproject.toml
api/spindle_api/: main.py  schemas.py
api/src/spindle_api/: __init__.py  main.py
api/tests/: conftest.py  test_smoke.py
cli/: PLAN.md
configs/: runtime.control-node.yaml  runtime.gpu-node.yaml
core/: PLAN.md  pyproject.toml
core/spindle_core/: __init__.py
core/spindle_core/artifacts/: protocol.py  s3.py
core/spindle_core/queue/: __init__.py
core/spindle_core/state/: __init__.py  _serialization.py  mongo.py
core/spindle_core/types/: artifact.py  errors.py  job.py
core/src/spindle_core/: __init__.py  _time.py  settings.py
core/src/spindle_core/artifacts/: __init__.py  memory.py
core/src/spindle_core/queue/: memory.py  protocol.py  redis_streams.py
core/src/spindle_core/state/: mongo.py  protocol.py
core/src/spindle_core/types/: __init__.py  config.py  events.py  job.py  lease.py
core/tests/: conftest.py  test_artifact_store.py  test_job_types.py  test_mongo_artifacts.py  test_mongo_configs.py  test_mongo_state.py  test_queue.py
dispatcher/: PLAN.md
docs/: api-contract.md
infra/: PLAN.md
infra/external-ssd/: SETUP.md
infra/minio/: README.md  bootstrap.sh  compose.yaml
runtime/: PLAN.md  pyproject.toml
runtime/spindle_runtime/: config.py  dispatcher.py  main.py
runtime/src/spindle_runtime/: __init__.py  child.py  config.py  main.py  supervisor.py
runtime/tests/: conftest.py  test_child.py  test_config.py  test_dispatcher.py  test_supervisor.py
workers/: PLAN.md  pyproject.toml
workers/audio_tts/: PLAN.md
workers/spindle_workers/audio_tts/: __init__.py  worker.py
workers/spindle_workers/audio_tts/backends/: _util.py  f5.py  kokoro.py
workers/spindle_workers/audio_tts/f5/: __init__.py
workers/spindle_workers/audio_tts/kokoro/: __init__.py  __main__.py
workers/spindle_workers/audio_tts/openai/: __main__.py
workers/spindle_workers/base/: artifact_writer.py  config.py
workers/src/spindle_workers/: __init__.py
workers/src/spindle_workers/audio_tts/: __main__.py  main.py  worker.py
workers/src/spindle_workers/audio_tts/backends/: __init__.py  _util.py  base.py  f5.py  openai.py
workers/src/spindle_workers/audio_tts/f5/: __main__.py  worker.py
workers/src/spindle_workers/audio_tts/kokoro/: worker.py
workers/src/spindle_workers/audio_tts/openai/: __init__.py  worker.py
workers/src/spindle_workers/base/: __init__.py  api_client.py  ipc.py  worker.py
workers/src/spindle_workers/text_rewrite/: __init__.py  worker.py
workers/src/spindle_workers/text_rewrite/backends/: __init__.py  base.py  claude.py
workers/src/spindle_workers/text_rewrite/claude/: __init__.py  __main__.py  worker.py
workers/tests/: conftest.py  test_audio_tts.py  test_ipc.py  test_text_rewrite.py  test_worker_base.py
