[project]
name = "spindle-api"
version = "0.1.0"
description = "Spindle FastAPI gateway."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "spindle-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
spindle-api = "spindle_api.main:run"

[tool.uv.sources]
spindle-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spindle_api"]
