[project]
name = "spindle-core"
version = "0.1.0"
description = "Spindle — domain types, protocols, and backend implementations."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "motor>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spindle_core"]
