[project]
name = "spindle-runtime"
version = "0.1.0"
description = "Spindle — per-node worker supervisor."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "spindle-core",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
spindle-core = { workspace = true }

[project.scripts]
spindle-workers = "spindle_runtime.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spindle_runtime"]
