[project]
name = "spindle-workers"
version = "0.1.0"
description = "Spindle workers — base class + concrete shims."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "spindle-core",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
audio_tts = ["openai>=1.40"]
audio_tts_f5 = ["openai>=1.40", "f5-tts", "numpy>=1.24"]
audio_tts_kokoro = ["openai>=1.40", "kokoro>=0.7", "numpy>=1.24"]
audio_tts_all = ["openai>=1.40", "f5-tts", "kokoro>=0.7", "numpy>=1.24"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
spindle-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spindle_workers"]
